fix: se agrega buscador a select de usuarios para mensajes
